# truenas_pyscstadmin

./: Makefile  README-TESTING.md  README.md  __init__.py  dev.py  pyproject.toml  pyscstadmin  pytest.ini
debian/: changelog  control  copyright  rules
scstadmin/: README.md  __init__.py  admin.py  config.py  constants.py  exceptions.py  modules.py  parser.py  sysfs.py
scstadmin/readers/: __init__.py  config_reader.py  device_reader.py  group_reader.py  target_reader.py
scstadmin/writers/: __init__.py  device_writer.py  group_writer.py  target_writer.py  utils.py
tests/: conftest.py  test_admin.py  test_config.py  test_copy_manager.py  test_device_attributes.py  test_logging.py  test_modules.py  test_parser.py  test_parsing_errors.py  test_readers.py  test_structured_parsing.py  test_writers.py
tests/fixtures/invalid_configs/: missing_braces.conf  syntax_errors.conf
tests/fixtures/valid_configs/: basic.conf  complex.conf
